# BiBoLA

bitbots_template_cpp/: CMakeLists.txt  package.xml
bitbots_template_cpp/include/bibola/: bibola.hpp
bitbots_template_cpp/launch/: template.launch
bitbots_template_cpp/src/: bibola.cpp
